# CGAN-MNIST

./: LICENSE  README.md  pyproject.toml
mnist_gan/: __main__.py  dataset.py  modules.py  types.py
tests/: test_mnist_gan.py  test_module.py
